--- a/French.lng
+++ b/French.lng
@@ -1,11 +1,11 @@
 |~LANGUAGENAME|
 |Français|
 |~LANGUAGEVERSION|
-|1.11|
+|1.12|
 |~LANGUAGEAUTHOR|
-|Marc Tissot - Audran Moulard - whibo|
+|Marc Tissot|
 |~LANGUAGEAUTHOREMAIL|
-|mtissot@iota.ch, http://www.iota.ch/ - gthf@users.sf.net - http://portableapps.com/user/14824|
+|mtissot@iota.ch, http://www.iota.ch/|
 |&OK|
 |&OK|
 |&Cancel|
@@ -269,7 +269,7 @@
 |Clipboard cleared.|
 |Contenu du presse-papiers effacé.|
 |Field copied to clipboard. Clipboard will be cleared in %d seconds.|
-|Champs copiés dans le presse-papiers. Effacement dans %d secondes.|
+|Champ copiés dans le presse-papiers. Effacement dans %d secondes.|
 |Profile|
 |Profil|
 |Repeat:|
@@ -856,8 +856,6 @@
 |Copier les URLs dans le presse-papiers plutôt que de les ouvrir (exception pour les URLs cmd://)|
 |Create new IDs|
 |Créer de nouveaux IDs|
-|Disable all auto-type features|
-|Désactiver toutes les fonctionnalités de saisie automatique|
 |If you select this option, KeePass will create new IDs for all groups and entries. Consequently no existing groups and entries of the currently opened database will be modified or overwritten.|
 |Si vous sélectionnez cette option, KeePass créera de nouveaux IDs pour tous les groupes et entrées. Par conséquent aucun groupe ni entrée de la base de mots de passe actuellement ouverte ne sera modifié ou écrasé.|
 |KeePass will compare the last-modified times of the groups/entries and replace the existing ones only if the ones to import are newer.|
@@ -1111,7 +1109,7 @@
 |Clear Search History|
 |Effacer l'historique de recherche|
 |Collect additional &entropy|
-|Collecter de l'entropie additionnel|
+|Collecter de l'entropie additionnelle|
 |Default user name for new entries:|
 |Nom d'utilisateur par défaut pour la nouvelle entrée|
 |Exclude the following characters:|
@@ -1224,3 +1222,39 @@
 |Champ URL: Choisir l'application...|
 |URL Field: Select Document...|
 |Champ URL: Choisir le document...|
+|Default auto-type sequence for standard entries:|
+|Séquence de saisie automatique par défault pour entrées standard:|
+|Drop to background when copying data to the clipboard|
+|Supprimer le fond lors de la copie de données dans le presse-papier|
+|Enable auto-type features|
+|Activer les fonctionnalités de saisie automatique|
+|Field to reference|
+|Champ pour référence|
+|Here you can configure auto-type.|
+|Ici vous pouvez configurer la saisie automatique.|
+|Identify source entry by|
+|Identifier l'entrée d'origine par|
+|In Notes Field|
+|Dans le champ Notes|
+|In Password Field|
+|Dans le champ Mot de passe|
+|In Title Field|
+|Dans le champ Titre|
+|In URL Field|
+|Dans le champ URL|
+|In User Name Field|
+|Dans le champ Nom d'utilisateur|
+|Insert Field Reference|
+|Insérer le champ Référence|
+|Multiple entries match the specified identifying field.|
+|Plusieures entrées correspondent le champ d'identification sélectionné.|
+|Prepend special initialization sequence for Internet Explorer windows|
+|Séquence spéciale d'initialisation préalable pour les fenêtres d'Internet Explorer
+|Source field to reference|
+|Champs origine pour référence|
+|The selected field, that identifies the source entry, contains disallowed characters (like '{', '}', newline characters, ...).|
+|Le champ sélectionné, qui identifie l'entrée d'origine, contient des caractères (tels que '{', '}', caractère de nouvelle ligne...) interdits.|
+|The target file might be in a corrupted state. Please try saving again, and if that fails, save the database to a different location.|
+|Le fichier cible est peut être dans un état corrompu. Essayer de l'enregistrer encore une fois, et si cela ne fonctionne pas, enregistrer la base de données dans un répertoire différent.|
+|To avoid ambiguity, entries can be identified by their UUIDs, which are unique.|
+|Afin d'éviter les ambigüités, les entrées peuvent être identifiées par leur UUID, qui sont unique.|
